# aoc2024

./: .gitignore  Cargo.toml  README.md  fill_days.sh  graph.dot  robot_scene.py  template.rs  test_codspeed.sh
.devcontainer/: devcontainer.json
benches/: my_benchmark.rs
day1/src/: lib.rs  main.rs
input/2024/: day6-seen.txt
src/: day1.rs  day10.rs  day10_video.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day18_old.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day9_iterators.rs  lib.rs
src/day18/: generics.rs
src/day8/: day8_impl.rs
