[package]
name = "day1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
petgraph = "0.6.5"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
