[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
env_logger = "0.11.5"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
pathfinding = "4.12.0"
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.11.1"
test-log = { version = "0.2.16", features = ["trace"] }
tracing = "0.1.41"
z3 = "0.12.1"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
